syntax = "proto3";

option go_package="handworks/common/grpc/account";
import "google/protobuf/timestamp.proto";

service AccountService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
    rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse);
    rpc GetEmployee (GetEmployeeRequest) returns (GetCustomerResponse);
}
message Account {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string role = 5;
  string provider = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}
message Customer {
    string id = 1;
    Account account = 2;
    // add binded addresses here
}
message Employee {
    string id = 1;
    Account Account = 2;
    string position = 3;
    EmployeeStatus status = 4;
    float performance_score = 5;
    google.protobuf.Timestamp hire_date = 6;
}
enum EmployeeStatus {
    ACTIVE = 0;
    ONDUTY = 1;
    INACTIVE = 2;
}
message GetAccountRequest{
    string id = 1;
}
message GetAccountResponse{
    Account account = 1;
}
message GetCustomerRequest {
    string id = 1;
}
message GetCustomerResponse {
    Customer customer = 1;
}
message GetEmployeeRequest {
    string id = 1;
}
message GetEmployeeResponse {
    string id = 1;
    Employee employee = 2;
}
message SignUpRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string provider = 4;
    string clerk_id = 5;
}
message SignUpResponse {
    Account account = 1;
}